--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Playground</title>
-    <link rel="stylesheet" href="playground.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <main>
